--- a/sample_000-default.conf
+++ b/sample_000-default.conf
@@ -39,6 +39,7 @@
 	# alert, emerg.
 	LogLevel warn
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
+        #Log Cookies
         LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-Agent}i\" \"%{Cookie}i\"" with_cookies
 	CustomLog /var/log/apache2/cookies.log with_cookies
 </VirtualHost>
